20070608
========

- Changed output format for numbers <0 so that it they are displayed as
  follows:

  1/10    = 0.1
  1/100   = 10m
  1/1000  = 1m
  1/10000 = 0.1m

- Allow use of () brackets as well as [], directly equivalent to each other.