@@ -45,22 +45,13 @@ _		- The result of the last ralcalc run (stored in $HOME/.ralcalc_result)
 Precedence
 ----------
 
-The equations are processed left to right, which breaks traditional operator
-precedence. This is regarded as a bug and will be fixed! Anything within
-brackets [] is processed first, so this can be used to work around the bad
-behaviour.
-
-= 1+2^.5
-1+2^.5 = 1.73205 (incorrect)
-
-= 1+[2^.5]
-1+[2^.5] = 2.41421 (correct)
+The equations are processed in order of ^, * /, + -. Anything within
+brackets [] is processed first.
 
 
 To Do
 -----
 
-Fix precedence.
 Add support for e.g. 3e-3 style numbers.
 Function support sin[2]
 
